// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - File With translation renders correctly 1`] = `
<test>
  <div
    class="ecl-file"
    data-ecl-auto-init="FileDownload"
    data-ecl-file=""
  >
    <div
      class="ecl-file__container"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xl ecl-file__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--copy"
        />
      </svg>
      <div
        class="ecl-file__info"
      >
        <div
          class="ecl-file__title"
        >
          State of the Union 2018 brochure
        </div>
        <div
          class="ecl-file__language"
        >
          English
        </div>
        <div
          class="ecl-file__meta"
        >
          (16.2 MB - PDF)
        </div>
      </div>
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-file__download"
        download=""
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          Download
        </span>
         
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--fluid ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--download"
          />
        </svg>
      </a>
    </div>
    <div
      class="ecl-file__translation-container"
      data-ecl-file-translation-container=""
    >
      <button
        class="ecl-button ecl-button--ghost ecl-file__translation-toggle"
        data-ecl-file-translation-toggle=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Other languages (3)
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </span>
      </button>
      <ul
        class="ecl-file__translation-list"
      >
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              lang="bg"
            >
              български
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.7 MB - PDF)
            </div>
          </div>
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-file__translation-download"
            download=""
            href="/example#bg"
            hreflang="bg"
          >
            <span
              class="ecl-link__label"
            >
              Download
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--download"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              lang="es"
            >
              español
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.8 MB - PDF)
            </div>
          </div>
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-file__translation-download"
            download=""
            href="/example#es"
            hreflang="es"
          >
            <span
              class="ecl-link__label"
            >
              Download
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--download"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              lang="fr"
            >
              français
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.4 MB - PDF)
            </div>
          </div>
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-file__translation-download"
            download=""
            href="/example#fr"
            hreflang="fr"
          >
            <span
              class="ecl-link__label"
            >
              Download
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--download"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-file__translation-item ecl-file__translation-description"
        >
          Looking for another language which is not on the list? Find out why.
        </li>
      </ul>
    </div>
  </div>
</test>
`;

exports[`EC - File With translation renders correctly with extra attributes 1`] = `
<test>
  <div
    class="ecl-file"
    data-ecl-auto-init="FileDownload"
    data-ecl-file=""
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-file__container"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xl ecl-file__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--copy"
        />
      </svg>
      <div
        class="ecl-file__info"
      >
        <div
          class="ecl-file__title"
        >
          State of the Union 2018 brochure
        </div>
        <div
          class="ecl-file__language"
        >
          English
        </div>
        <div
          class="ecl-file__meta"
        >
          (16.2 MB - PDF)
        </div>
      </div>
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-file__download"
        download=""
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          Download
        </span>
         
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--fluid ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--download"
          />
        </svg>
      </a>
    </div>
    <div
      class="ecl-file__translation-container"
      data-ecl-file-translation-container=""
    >
      <button
        class="ecl-button ecl-button--ghost ecl-file__translation-toggle"
        data-ecl-file-translation-toggle=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Other languages (3)
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </span>
      </button>
      <ul
        class="ecl-file__translation-list"
      >
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              lang="bg"
            >
              български
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.7 MB - PDF)
            </div>
          </div>
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-file__translation-download"
            download=""
            href="/example#bg"
            hreflang="bg"
          >
            <span
              class="ecl-link__label"
            >
              Download
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--download"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              lang="es"
            >
              español
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.8 MB - PDF)
            </div>
          </div>
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-file__translation-download"
            download=""
            href="/example#es"
            hreflang="es"
          >
            <span
              class="ecl-link__label"
            >
              Download
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--download"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              lang="fr"
            >
              français
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.4 MB - PDF)
            </div>
          </div>
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-file__translation-download"
            download=""
            href="/example#fr"
            hreflang="fr"
          >
            <span
              class="ecl-link__label"
            >
              Download
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--download"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-file__translation-item ecl-file__translation-description"
        >
          Looking for another language which is not on the list? Find out why.
        </li>
      </ul>
    </div>
  </div>
</test>
`;

exports[`EC - File With translation renders correctly with extra class names 1`] = `
<test>
  <div
    class="ecl-file custom-class custom-class--test"
    data-ecl-auto-init="FileDownload"
    data-ecl-file=""
  >
    <div
      class="ecl-file__container"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xl ecl-file__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--copy"
        />
      </svg>
      <div
        class="ecl-file__info"
      >
        <div
          class="ecl-file__title"
        >
          State of the Union 2018 brochure
        </div>
        <div
          class="ecl-file__language"
        >
          English
        </div>
        <div
          class="ecl-file__meta"
        >
          (16.2 MB - PDF)
        </div>
      </div>
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-file__download"
        download=""
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          Download
        </span>
         
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--fluid ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--download"
          />
        </svg>
      </a>
    </div>
    <div
      class="ecl-file__translation-container"
      data-ecl-file-translation-container=""
    >
      <button
        class="ecl-button ecl-button--ghost ecl-file__translation-toggle"
        data-ecl-file-translation-toggle=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Other languages (3)
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
        </span>
      </button>
      <ul
        class="ecl-file__translation-list"
      >
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              lang="bg"
            >
              български
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.7 MB - PDF)
            </div>
          </div>
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-file__translation-download"
            download=""
            href="/example#bg"
            hreflang="bg"
          >
            <span
              class="ecl-link__label"
            >
              Download
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--download"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              lang="es"
            >
              español
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.8 MB - PDF)
            </div>
          </div>
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-file__translation-download"
            download=""
            href="/example#es"
            hreflang="es"
          >
            <span
              class="ecl-link__label"
            >
              Download
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--download"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              lang="fr"
            >
              français
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.4 MB - PDF)
            </div>
          </div>
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-file__translation-download"
            download=""
            href="/example#fr"
            hreflang="fr"
          >
            <span
              class="ecl-link__label"
            >
              Download
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--download"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-file__translation-item ecl-file__translation-description"
        >
          Looking for another language which is not on the list? Find out why.
        </li>
      </ul>
    </div>
  </div>
</test>
`;

exports[`EC - File With translation with validation enabled and missing input data returns the right warning message 1`] = `
<test>
  <div
    class="ecl-file"
    data-ecl-auto-init="FileDownload"
    data-ecl-file=""
  >
    <div
      class="ecl-file__container"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xl ecl-file__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--copy"
        />
      </svg>
      <span
        class="ecl-u-type-color-green"
        title="[icon] - ecl compliant."
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#notifications--success"
          />
        </svg>
      </span>
      <div
        class="ecl-file__info"
      >
        <div
          class="ecl-file__title"
        >
          State of the Union 2018 brochure
        </div>
        <div
          class="ecl-file__language"
        >
          English
        </div>
        <div
          class="ecl-file__meta"
        >
          (16.2 MB - PDF)
        </div>
      </div>
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-file__download"
        download=""
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          Download
        </span>
         
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--fluid ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--download"
          />
        </svg>
        <span
          class="ecl-u-type-color-green"
          title="[icon] - ecl compliant."
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#notifications--success"
            />
          </svg>
        </span>
      </a>
      <span
        class="ecl-u-type-color-green"
        title="[link--standalone] - ecl compliant."
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#notifications--success"
          />
        </svg>
      </span>
    </div>
    <div
      class="ecl-file__translation-container"
      data-ecl-file-translation-container=""
    >
      <button
        class="ecl-button ecl-button--ghost ecl-file__translation-toggle"
        data-ecl-file-translation-toggle=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Other languages (3)
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon ecl-button__icon--after"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#ui--corner-arrow"
            />
          </svg>
          <span
            class="ecl-u-type-color-green"
            title="[icon] - ecl compliant."
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#notifications--success"
              />
            </svg>
          </span>
        </span>
      </button>
      <span
        class="ecl-u-type-color-green"
        title="[button--ghost] - ecl compliant."
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#notifications--success"
          />
        </svg>
      </span>
      <ul
        class="ecl-file__translation-list"
      >
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              lang="bg"
            />
            <div
              class="ecl-file__translation-meta"
            >
              (15.7 MB - PDF)
            </div>
          </div>
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-file__translation-download"
            download=""
            href="/example#bg"
            hreflang="bg"
          >
            <span
              class="ecl-link__label"
            />
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--download"
              />
            </svg>
            <span
              class="ecl-u-type-color-green"
              title="[icon] - ecl compliant."
            >
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#notifications--success"
                />
              </svg>
            </span>
          </a>
          <span
            class="ecl-u-type-color-green"
            title="[link--standalone] - ecl compliant."
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#notifications--success"
              />
            </svg>
          </span>
        </li>
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              lang="es"
            >
              español
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.8 MB - PDF)
            </div>
          </div>
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-file__translation-download"
            download=""
            href="/example#es"
            hreflang="es"
          >
            <span
              class="ecl-link__label"
            >
              Download
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--download"
              />
            </svg>
            <span
              class="ecl-u-type-color-green"
              title="[icon] - ecl compliant."
            >
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#notifications--success"
                />
              </svg>
            </span>
          </a>
          <span
            class="ecl-u-type-color-green"
            title="[link--standalone] - ecl compliant."
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#notifications--success"
              />
            </svg>
          </span>
        </li>
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              lang="fr"
            >
              français
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.4 MB - PDF)
            </div>
          </div>
          <a
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-file__translation-download"
            download=""
            href="/example#fr"
            hreflang="fr"
          >
            <span
              class="ecl-link__label"
            >
              Download
            </span>
             
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#ui--download"
              />
            </svg>
            <span
              class="ecl-u-type-color-green"
              title="[icon] - ecl compliant."
            >
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#notifications--success"
                />
              </svg>
            </span>
          </a>
          <span
            class="ecl-u-type-color-green"
            title="[link--standalone] - ecl compliant."
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#notifications--success"
              />
            </svg>
          </span>
        </li>
        <li
          class="ecl-file__translation-item ecl-file__translation-description"
        >
          Looking for another language which is not on the list? Find out why.
        </li>
      </ul>
    </div>
  </div>
  <!-- ecl2-compliance: file -->
  <div
    class="ecl2-compliance ecl-u-border-width-1 ecl-u-mt-xl ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
  >
    <p
      class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
    >
      [file] -  "In the "translation.items" each item needs a "download.title" to be set and filled in.
    </p>
  </div>
</test>
`;

exports[`EC - File Without translation renders correctly 1`] = `
<test>
  <div
    class="ecl-file"
    data-ecl-file=""
  >
    <div
      class="ecl-file__container"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xl ecl-file__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--copy"
        />
      </svg>
      <div
        class="ecl-file__info"
      >
        <div
          class="ecl-file__title"
        >
          State of the Union 2018 brochure
        </div>
        <div
          class="ecl-file__language"
        >
          English
        </div>
        <div
          class="ecl-file__meta"
        >
          (16.2 MB - PDF)
        </div>
      </div>
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-file__download"
        download=""
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          Download
        </span>
         
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--fluid ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--download"
          />
        </svg>
      </a>
    </div>
  </div>
</test>
`;

exports[`EC - File Without translation renders correctly with extra attributes 1`] = `
<test>
  <div
    class="ecl-file"
    data-ecl-file=""
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-file__container"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xl ecl-file__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--copy"
        />
      </svg>
      <div
        class="ecl-file__info"
      >
        <div
          class="ecl-file__title"
        >
          State of the Union 2018 brochure
        </div>
        <div
          class="ecl-file__language"
        >
          English
        </div>
        <div
          class="ecl-file__meta"
        >
          (16.2 MB - PDF)
        </div>
      </div>
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-file__download"
        download=""
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          Download
        </span>
         
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--fluid ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--download"
          />
        </svg>
      </a>
    </div>
  </div>
</test>
`;

exports[`EC - File Without translation renders correctly with extra class names 1`] = `
<test>
  <div
    class="ecl-file custom-class custom-class--test"
    data-ecl-file=""
  >
    <div
      class="ecl-file__container"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xl ecl-file__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--copy"
        />
      </svg>
      <div
        class="ecl-file__info"
      >
        <div
          class="ecl-file__title"
        >
          State of the Union 2018 brochure
        </div>
        <div
          class="ecl-file__language"
        >
          English
        </div>
        <div
          class="ecl-file__meta"
        >
          (16.2 MB - PDF)
        </div>
      </div>
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-file__download"
        download=""
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          Download
        </span>
         
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--fluid ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--download"
          />
        </svg>
      </a>
    </div>
  </div>
</test>
`;

exports[`EC - File Without translation with validation enabled and missing input data returns the right warning message 1`] = `
<test>
  <div
    class="ecl-file"
    data-ecl-file=""
  >
    <div
      class="ecl-file__container"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xl ecl-file__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#general--copy"
        />
      </svg>
      <span
        class="ecl-u-type-color-green"
        title="[icon] - ecl compliant."
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#notifications--success"
          />
        </svg>
      </span>
      <div
        class="ecl-file__info"
      >
        <div
          class="ecl-file__title"
        >
          State of the Union 2018 brochure
        </div>
      </div>
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-file__download"
        download=""
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          Download
        </span>
         
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--fluid ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#ui--download"
          />
        </svg>
        <span
          class="ecl-u-type-color-green"
          title="[icon] - ecl compliant."
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#notifications--success"
            />
          </svg>
        </span>
      </a>
      <span
        class="ecl-u-type-color-green"
        title="[link--standalone] - ecl compliant."
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#notifications--success"
          />
        </svg>
      </span>
    </div>
  </div>
  <!-- ecl2-compliance: file -->
  <div
    class="ecl2-compliance ecl-u-border-width-1 ecl-u-mt-xl ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
  >
    <p
      class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
    >
      [file] -  "meta" is mandatory. "language" is mandatory.
    </p>
  </div>
</test>
`;
